syntax = "proto3";

package card;

message Empty {}

message Card {
	// A web link to the image to display
	string image = 1;

	// The text to display with the card
	string text = 2;

	// The action to take along with the card
	enum Action {
	     NONE = 0;
             VISITURL = 1;
	     RATING = 2;
             RATE = 3;
	}
	Action action = 3;

	// The date the card was created
	int64 created_date = 4;

	// The date from which the card should be applied
	int64 application_date = 5;

	// The date from which the card can be removed
	int64 expiration_date = 6;

	// The chosen priority of the card
	int32 priority = 7;

	// A hash id of the card
	string hash = 8;

	// Metadata for the action
	repeated string action_metadata = 9;
}

message DeleteRequest {
	string hash = 1;
}

message CardList {
	repeated Card cards = 1;
}

service CardService {
	// Gets the cards currently held in the system
	rpc GetCards (Empty) returns (CardList) {};

	// Adds the cards in the list to the system - returns the resulting card list
	rpc AddCards (CardList) returns (CardList) {};

	// Deletes existing cards
	rpc DeleteCards (DeleteRequest) returns (CardList) {};
}